force-app/main/default/objects/Species__c/fields/Ideal_Max_Temperatu__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Max_Temperatu__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Ideal Max Temperature</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>