force-app/main/default/objects/Species__c/fields/Image_url__c.field-meta.xml
<CustomField>
    <fullName>Image_url__c</fullName>
    <label>Image Url</label>
    <type>Url</type>
</CustomField>