force-app/main/default/objects/Species__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <description>Months Of Year</description>
    <label>Months</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>