force-app/main/default/objects/Species__c/fields/Pulverizar__c.field-meta.xml
<CustomField>
    <fullName>Pulverizar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulverization</label>
    <type>Checkbox</type>
</CustomField>